crates/java/tests/snapshots/baseline_konveyor__konveyor_sd_module_export_removed.snap
---
source: crates/java/tests/baseline_konveyor.rs
expression: normalize_rules(&rules)
---
- rule_id: java-sd-module-export-removed-module-info
  labels:
    - source=semver-analyzer
    - change-type=module-export-removed
    - language=java
    - pipeline=sd
  effort: 5
  category: mandatory
  description: "Module directive removed: `exports com.example.internal`"
  has_fix_strategy: false
