crates/java/tests/snapshots/baseline_konveyor__konveyor_sd_synchronized_removed.snap
---
source: crates/java/tests/baseline_konveyor.rs
expression: normalize_rules(&rules)
---
- rule_id: java-sd-synchronization-removed-com-example-cache
  labels:
    - source=semver-analyzer
    - change-type=synchronization-removed
    - language=java
    - pipeline=sd
    - scope=method
  effort: 3
  category: mandatory
  description: "Method `update` is no longer synchronized"
  has_fix_strategy: false
