crates/java/tests/snapshots/baseline_konveyor__konveyor_td_class_removed.snap
---
source: crates/java/tests/baseline_konveyor.rs
expression: normalize_rules(&rules)
---
- rule_id: java-removed-deprecatedhelper
  labels:
    - source=semver-analyzer
    - change-type=removed
    - language=java
  effort: 5
  category: mandatory
  description: "`DeprecatedHelper` has been removed"
  has_fix_strategy: false
