crates/java/tests/snapshots/baseline_konveyor__konveyor_td_class_renamed.snap
---
source: crates/java/tests/baseline_konveyor.rs
expression: normalize_rules(&rules)
---
- rule_id: java-rename-oldservice
  labels:
    - source=semver-analyzer
    - change-type=renamed
    - language=java
  effort: 3
  category: mandatory
  description: "`com.example.OldService` renamed to `com.example.NewService`"
  has_fix_strategy: true
